--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             align-items: center;
           "
         >
+          <span>fftSize</span>
           <input type="range" min="5" max="15" value="8" id="slider" />
           <span id="sliderv">256</span>
         </div>
