--- a/index.html
+++ b/index.html
@@ -31,8 +31,20 @@
           "
         >
           <span>fftSize</span>
-          <input type="range" min="5" max="15" value="8" id="slider" />
-          <span id="sliderv">256</span>
+          <input type="range" min="5" max="15" value="8" id="sliderFFTSize" />
+          <span id="sliderFFTSizeV">256</span>
+        </div>
+        <div
+          style="
+            display: flex;
+            flex-direction: row;
+            justify-content: left;
+            align-items: center;
+          "
+        >
+          <span>gain</span>
+          <input type="range" min="0" max="100" value="30" id="sliderGain" />
+          <span id="sliderGainV">30</span>
         </div>
       </div>
     </div>
